--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -8,7 +8,7 @@
     tools:context=".QuestionActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/questionText"
         android:layout_width="396dp"
         android:layout_height="183dp"
         android:layout_marginStart="16dp"
@@ -24,42 +24,53 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/answerButton1"
-        android:layout_width="208dp"
-        android:layout_height="138dp"
-        android:layout_marginTop="154dp"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/answerButton2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Button
-        android:id="@+id/answerButton2"
-        android:layout_width="208dp"
-        android:layout_height="138dp"
-        android:layout_marginTop="154dp"
-        android:text="Button"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="413dp"
+        android:layout_height="192dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/answerButton1"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Button
-        android:id="@+id/answerButton3"
-        android:layout_width="208dp"
-        android:layout_height="138dp"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/answerButton4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/answerButton1" />
+        app:layout_constraintTop_toBottomOf="@+id/questionText">
+
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RadioButton" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RadioButton" />
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RadioButton" />
+
+        <RadioButton
+            android:id="@+id/radioButton4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RadioButton" />
+    </RadioGroup>
 
     <Button
-        android:id="@+id/answerButton4"
-        android:layout_width="208dp"
-        android:layout_height="138dp"
-        android:text="Button"
+        android:id="@+id/button5"
+        android:layout_width="221dp"
+        android:layout_height="132dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="16dp"
+        android:text="next question"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/answerButton3"
-        app:layout_constraintTop_toBottomOf="@+id/answerButton2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
